[package]
name = "subordinates"
version = "0.1.0"
edition = "2018"
description = """Subordinates solution with recursive and iterative DFS."""
authors = [ "Ranveer <ranveermaan1702@gmail.com>" ]

[dependencies]


[dev-dependencies]
assert_cmd = "2.2.0"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
scraper = "0.13"
zip = "0.6"
dotenvy = "0.15"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"
